// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Image with extra styles 1`] = `
<img
  className="css-db6khz"
  src="https://bit.ly/2wwKsKD"
  style={
    Object {
      "transform": "rotate(45deg)",
    }
  }
/>
`;

exports[`Storyshots Image with width 1`] = `
<img
  className="css-nia9ss"
  src="https://bit.ly/2wwKsKD"
/>
`;

exports[`Storyshots Image with withshadow 1`] = `
<img
  className="css-1m93pep"
  src="https://bit.ly/2wwKsKD"
  withshadow={true}
/>
`;

exports[`Storyshots Image with withshadow withradius 1`] = `
<img
  className="css-1ar4abe"
  src="https://bit.ly/2wwKsKD"
  withradius="50%"
  withshadow={true}
/>
`;

exports[`Storyshots Image without src attribute 1`] = `
<img
  className="css-1p7prg0"
  src="https://bit.ly/2wwKsKD"
/>
`;
